--- a/config/needle_passing.yaml
+++ b/config/needle_passing.yaml
@@ -1,11 +1,13 @@
-PATH_TO_DATA: "/home/animesh/DeepMilestones/jigsaws/Suturing_video/"
-PATH_TO_CLUSTERING_RESULTS: "/home/animesh/DeepMilestones/clustering_E12345/"
-PATH_TO_KINEMATICS: "/home/animesh/DeepMilestones/jigsaws/Suturing_kinematics/kinematics/AllGestures/"
-CONFIG_FILE: "meta_file_Suturing.txt"
-ALEXNET_FEATURES_FOLDER : "alexnetfeatures_2/"
-VGG_FEATURES_FOLDER : "vggfeatures_2/"
-PROC_FEATURES_FOLDER : "features_E12345/"
+PATH_TO_DATA: "/home/animesh/DeepMilestones/jigsaws/Needle_Passing_video/"
+PATH_TO_CLUSTERING_RESULTS: "/home/animesh/DeepMilestones/clustering/clustering_Needle_Passing/"
+PATH_TO_KINEMATICS: "/home/animesh/DeepMilestones/jigsaws/Needle_Passing_kinematics/kinematics/AllGestures/"
+CONFIG_FILE: "meta_file_Needle_Passing.txt"
+ALEXNET_FEATURES_FOLDER : "alexnetfeatures/"
+VGG_FEATURES_FOLDER : "vggfeatures/"
+PROC_FEATURES_FOLDER : "features/"
+REMOTE : False
 CROP_PARAMS_CAPTURE_1: "crop=330:260:200:170"
 CROP_PARAMS_CAPTURE_2: "crop=330:260:150:150"
-SR: 3
-PRUNING_FACTOR: 0.8
+CAMERA: "capture1"
+SR: 6
+PRUNING_FACTOR: 0.4
