interfaced parser (transciptions -> annotations and parse_kinematics mat files); modified config

--- a/config/suturing.yaml
+++ b/config/suturing.yaml
@@ -6,6 +6,8 @@ ALEXNET_FEATURES_FOLDER : "alexnetfeatures_2/"
 VGG_FEATURES_FOLDER : "vggfeatures_2/"
 PROC_FEATURES_FOLDER : "features_E12345/"
 REMOTE : True
+SIMULATION : False
+KINEMATICS_DIM : 38
 CROP_PARAMS_CAPTURE_1: "crop=330:260:200:170"
 CROP_PARAMS_CAPTURE_2: "crop=330:260:150:150"
 CAMERA: "capture2"
