--- a/config/0001.yaml
+++ b/config/0001.yaml
@@ -1,15 +1,15 @@
-PATH_TO_DATA: "/Users/adithyamurali/dev/DeepMilestones/jigsaws/Needle_Passing_video/"
+PATH_TO_DATA: "/Users/adithyamurali/dev/DeepMilestones/jigsaws/0001_video/"
 PATH_TO_CLUSTERING_RESULTS: "/Users/adithyamurali/dev/DeepMilestones/clustering/"
-PATH_TO_KINEMATICS: "/Users/adithyamurali/dev/DeepMilestones/jigsaws/Needle_Passing_kinematics/kinematics/AllGestures/"
-CONFIG_FILE: "meta_file_Needle_Passing.txt"
+PATH_TO_KINEMATICS: "/Users/adithyamurali/dev/DeepMilestones/jigsaws/0001_kinematics/"
+CONFIG_FILE: "meta_file_0001.txt"
 ALEXNET_FEATURES_FOLDER : "alexnetfeatures/"
 VGG_FEATURES_FOLDER : "vggfeatures/"
 PROC_FEATURES_FOLDER : "features/"
 REMOTE : True
-SIMULATION : False
-KINEMATICS_DIM : 38
+SIMULATION : True
+KINEMATICS_DIM : 3
 CROP_PARAMS_CAPTURE_1: "crop=330:260:200:170"
 CROP_PARAMS_CAPTURE_2: "crop=330:260:150:150"
 CAMERA: "capture1"
-SR: 6
-PRUNING_FACTOR: 0.75
+SR: 1
+PRUNING_FACTOR: 0.5
