--- a/config/suturing.yaml
+++ b/config/suturing.yaml
@@ -13,3 +13,6 @@ CROP_PARAMS_CAPTURE_2: "crop=330:260:150:150"
 CAMERA: "capture2"
 SR: 3
 PRUNING_FACTOR: 0.75
+N_COMPONENTS_CP : 50
+N_COMPONENTS_L1 : 10
+N_COMPONENTS_L2 : 3
